force-app/main/default/objects/nFORCE__Feature_Process__mdt/nFORCE__Feature_Process__mdt.object-meta.xml
<CustomObject>
    <description>The object defines the Apex processes that are associated with a feature.</description>
    <label>Feature Process</label>
    <pluralLabel>Feature Processes</pluralLabel>
</CustomObject>