force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Class__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Class__c</fullName>
    <description>This field is required. It specifies the fully qualified Apex class name of the process associated with the feature.</description>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>