force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Class_Handler__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Class_Handler__c</fullName>
    <description>This field is optional. The class handler indicates how to execute the process. It must be specified if the Class does not implement nFORCE.ALifeCycleDataProvider or Database.Batchable.</description>
    <label>Class Handler</label>
    <length>50</length>
    <type>Text</type>
</CustomField>