force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Execution_Sequence__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Execution_Sequence__c</fullName>
    <description>This field is required. It specifies the order in which processes associated with the feature will be executed.</description>
    <label>Execution Sequence</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>