force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Execution_Type__c</fullName>
    <description>The field is mandatory. It indicates when the process should be executed.</description>
    <label>Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Once Per Version</fullName>
                <label>Once Per Feature Process Version</label>
            </value>
            <value>
                <fullName>Manual Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>