force-app/main/default/objects/nFORCE__Feature_Process__mdt/fields/nFORCE__Version__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Version__c</fullName>
    <description>This field is required. It specifies the version number of the process. A change in version number implies a change in the process behavior.</description>
    <label>Version</label>
    <precision>8</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>